--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "flyio": "^0.6.2",
         "regenerator-runtime": "^0.12.1",
         "sm-crypto": "^0.3.11",
+        "spark-md5": "^3.0.2",
         "uni-read-pages": "^1.0.5",
         "uni-simple-router": "^2.0.7",
         "uview-ui": "^2.0.31",
